# vcpkg-registry-external

./: README.md
.github/workflows/: test_build.yaml
ports/biovault-bfloat16/: biovault_bflot16-config.cmake.in  portfile.cmake  vcpkg.json
ports/biovault_bfloat16/: portfile.cmake  vcpkg.json
ports/freeimage/: portfile.cmake  vcpkg.json
ports/hdilib/: fix-flann-target.patch  portfile.cmake  vcpkg.json
ports/kompute/: portfile.cmake  tSNE.patch  vcpkg.json
ports/qt/: portfile.cmake  qt-installer.py  vcpkg.json
ports/qt6/: QT_INSTALLER_LICENSE  README.md  installutils.py  macos_folder2thin.sh  portfile.cmake  qt-installer.py  vcpkg.json
ports/vtk/: portfile.cmake  vcpkg.json
test/registry-tester/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
test/registry-tester/biovault_bfloat16_test/: CMakeLists.txt
test/registry-tester/biovault_bfloat16_test/src/: main.cpp
test/registry-tester/freeimage_test/: CMakeLIsts.txt  CMakeLists.txt
test/registry-tester/freeimage_test/src/: main.cpp
test/registry-tester/hdilib_test/: CMakeLists.txt
test/registry-tester/qt_test/: CMakeLists.txt
test/registry-tester/src/: main.cpp
test/registry-tester/vtk_test/: CMakeLists.txt
test/registry-tester/vtk_test/src/: main.cpp
versions/: baseline.json
versions/b-/: biovault-bfloat16.json  biovault_bfloat16.json
versions/f-/: freeimage.json
versions/h-/: hdilib.json
versions/k-/: kompute.json
versions/q-/: qt.json  qt6.json
versions/v-/: vtk.json
